fill & delete progress
